--- a/.github/workflows/destroy-preview-infra-pipeline.yaml
+++ b/.github/workflows/destroy-preview-infra-pipeline.yaml
@@ -7,6 +7,12 @@ jobs:
     if: startsWith(github.event.ref, 'preview/')
     steps:
       - uses: actions/checkout@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+          cache: 'npm'
+          cache-dependency-path: './infra/package-lock.json'
       - name: Set account to dev & environment to preview
         if: startsWith(github.event.ref, 'preview/')
         run: |
@@ -26,7 +32,7 @@ jobs:
       - name: install deps
         working-directory: ./infra
         run: |
-          npm install --prefer-online
+          npm install
           npm run build:all
       - name: destroy all stacks
         working-directory: ./infra
