--- a/.github/workflows/preview-pipeline.yaml
+++ b/.github/workflows/preview-pipeline.yaml
@@ -10,6 +10,8 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
