--- a/infra/package.json
+++ b/infra/package.json
@@ -8,10 +8,6 @@
     "bin": {
         "infra": "bin/app.js"
     },
-    "config": {
-        "lambda_build_prefix": "npx @vercel/ncc@0.27.0 build --source-map --minify functions",
-        "lambda_build_suffix": "-o dist/functions"
-    },
     "scripts": {
         "build": "npx tsc",
         "build:all": "npm run clean && npm run build:lambda:api-model && tsc && npm run build:application && tsc",
@@ -26,90 +22,100 @@
         "build:lambda": "npm run build:lambda:api-model && concurrently 'npm:build:lambda:java' 'npm:build:lambda:ts'",
         "build:lambda:api-model": "(npm list @openapitools/openapi-generator-cli --prefix ../api-specs || npm i --prefix ../api-specs) && npm run build:out --prefix ../api-specs -- -o ../infra/functions/api/generated/api-schema.ts",
         "build:lambda:java": "concurrently 'npm:build:lambda:java:*'",
-        "build:lambda:java:database:aurora:migrator": "./functions/database/aurora/migrator/build-with-docker.sh",
-        "build:lambda:ts": "concurrently 'npm:build:lambda:ts:*'",
-        "build:lambda:ts:stack-lifecycle-event-callback-invoker": "$npm_package_config_lambda_build_prefix/resource-event-callback-invoker/index.ts $npm_package_config_lambda_build_suffix/resource-event-callback-invoker/index",
-        "build:lambda:ts:sample": "$npm_package_config_lambda_build_prefix/sample/api/handler/index.ts $npm_package_config_lambda_build_suffix/sample/api/handler"
+        "build:lambda:java:database:aurora:migrator": "./functions/database/aurora/migrator/build-with-docker.sh"
     },
     "devDependencies": {
-        "@almamedia/cdk-cross-region-parameter": "^0.1.1",
-        "@almamedia/cdk-regions": "^0.1.0",
-        "@almamedia/cdk-dynamodb-export": "^0.4.0",
-        "@almamedia/cdk-assumed-credentials-provider": "^0.4.0",
-        "@almamedia/cdk-open-api": "^0.9.0",
-        "@almamedia/cdk-tag-and-name": "^1.3.0",
         "@almamedia/cdk-accounts-and-environments": "^0.7.0",
-        "@aws-cdk/assert": "1.110.0",
-        "@aws-cdk/assets": "1.110.0",
-        "@aws-cdk/aws-apigateway": "1.110.0",
-        "@aws-cdk/aws-apigatewayv2": "1.110.0",
-        "@aws-cdk/aws-certificatemanager": "1.110.0",
-        "@aws-cdk/aws-cloudwatch": "1.110.0",
-        "@aws-cdk/aws-cloudwatch-actions": "1.110.0",
-        "@aws-cdk/aws-cloudfront": "1.110.0",
-        "@aws-cdk/aws-cloudformation": "1.110.0",
-        "@aws-cdk/aws-cloudfront-origins": "1.110.0",
-        "@aws-cdk/aws-codedeploy": "1.110.0",
-        "@aws-cdk/custom-resources": "1.110.0",
-        "@aws-cdk/aws-ec2": "1.110.0",
-        "@aws-cdk/aws-ecr-assets": "1.110.0",
-        "@aws-cdk/aws-ecs-patterns": "1.110.0",
-        "@aws-cdk/aws-elasticache": "1.110.0",
-        "@aws-cdk/aws-elasticloadbalancingv2": "1.110.0",
-        "@aws-cdk/aws-events": "1.110.0",
-        "@aws-cdk/aws-events-targets": "1.110.0",
-        "@aws-cdk/aws-iam": "1.110.0",
-        "@aws-cdk/aws-lambda": "1.110.0",
-        "@aws-cdk/aws-lambda-event-sources": "1.110.0",
-        "@aws-cdk/aws-logs": "1.110.0",
-        "@aws-cdk/aws-rds": "1.110.0",
-        "@aws-cdk/aws-route53": "1.110.0",
-        "@aws-cdk/aws-route53-targets": "1.110.0",
-        "@aws-cdk/aws-sns": "1.110.0",
-        "@aws-cdk/aws-sns-subscriptions": "1.110.0",
-        "@aws-cdk/aws-sqs": "1.110.0",
-        "@aws-cdk/aws-ssm": "1.110.0",
-        "@aws-cdk/aws-wafv2": "1.110.0",
-        "@aws-cdk/core": "1.110.0",
+        "@almamedia/cdk-assumed-credentials-provider": "^0.4.0",
+        "@almamedia/cdk-cross-region-parameter": "^0.1.1",
+        "@almamedia/cdk-dynamodb-export": "^0.4.0",
+        "@almamedia/cdk-open-api": "^0.11.0",
+        "@almamedia/cdk-regions": "^0.1.0",
+        "@almamedia/cdk-tag-and-name": "^1.3.0",
+        "@aws-cdk/assert": "1.125.0",
+        "@aws-cdk/assets": "1.125.0",
+        "@aws-cdk/aws-apigateway": "1.125.0",
+        "@aws-cdk/aws-apigatewayv2": "1.125.0",
+        "@aws-cdk/aws-certificatemanager": "1.125.0",
+        "@aws-cdk/aws-cloudformation": "1.125.0",
+        "@aws-cdk/aws-cloudfront": "1.125.0",
+        "@aws-cdk/aws-cloudfront-origins": "1.125.0",
+        "@aws-cdk/aws-cloudwatch": "1.125.0",
+        "@aws-cdk/aws-cloudwatch-actions": "1.125.0",
+        "@aws-cdk/aws-codedeploy": "1.125.0",
+        "@aws-cdk/aws-ec2": "1.125.0",
+        "@aws-cdk/aws-ecr-assets": "1.125.0",
+        "@aws-cdk/aws-ecs-patterns": "1.125.0",
+        "@aws-cdk/aws-elasticache": "1.125.0",
+        "@aws-cdk/aws-elasticloadbalancingv2": "1.125.0",
+        "@aws-cdk/aws-events": "1.125.0",
+        "@aws-cdk/aws-events-targets": "1.125.0",
+        "@aws-cdk/aws-iam": "1.125.0",
+        "@aws-cdk/aws-kms": "1.125.0",
+        "@aws-cdk/aws-lambda": "1.125.0",
+        "@aws-cdk/aws-lambda-event-sources": "1.125.0",
+        "@aws-cdk/aws-lambda-nodejs": "1.125.0",
+        "@aws-cdk/aws-logs": "1.125.0",
+        "@aws-cdk/aws-rds": "1.125.0",
+        "@aws-cdk/aws-route53": "1.125.0",
+        "@aws-cdk/aws-route53-targets": "1.125.0",
+        "@aws-cdk/aws-s3": "1.125.0",
+        "@aws-cdk/aws-sns": "1.125.0",
+        "@aws-cdk/aws-sns-subscriptions": "1.125.0",
+        "@aws-cdk/aws-sqs": "1.125.0",
+        "@aws-cdk/aws-ssm": "1.125.0",
+        "@aws-cdk/aws-wafv2": "1.125.0",
+        "@aws-cdk/cloud-assembly-schema": "1.125.0",
+        "@aws-cdk/core": "1.125.0",
+        "@aws-cdk/custom-resources": "1.125.0",
+        "@aws-cdk/cx-api": "1.125.0",
         "@types/aws-lambda": "^8.10.76",
         "@types/jest": "^26.0.23",
+        "@types/lodash": "^4.14.168",
         "@types/node": "14.17.4",
+        "@types/test-console": "^1.1.0",
         "@typescript-eslint/eslint-plugin": "^4.14.2",
         "@typescript-eslint/parser": "^4.14.2",
-        "aws-cdk": "1.110.0",
+        "aws-cdk": "1.125.0",
         "change-case": "^4.1.2",
         "concurrently": "^5.3.0",
+        "esbuild": "^0.13.3",
         "eslint": "^7.19.0",
         "eslint-config-prettier": "^7.2.0",
         "eslint-plugin-prettier": "^3.4.0",
         "husky": "^4.3.8",
         "jest": "^26.6.3",
         "lint-staged": "^10.5.3",
+        "pg": "^8.7.1",
         "prettier": "^2.3.0",
         "source-map-support": "^0.5.19",
+        "test-console": "^2.0.0",
+        "testcontainers": "^7.19.1",
         "ts-jest": "^26.5.5",
         "ts-node": "^9.0.0",
-        "typescript": "^4.1.3"
+        "typescript": "^4.4.3"
     },
     "dependencies": {
-        "@middy/core": "~2.4.0",
-        "@middy/http-error-handler": "~2.4.0",
-        "@middy/http-json-body-parser": "~2.4.0",
-        "@middy/validator": "~2.4.0",
+        "@almamedia/ovipro-common-entities": "^0.1.19",
+        "@dazn/lambda-powertools-correlation-ids": "1.28.1",
+        "@dazn/lambda-powertools-logger": "1.28.1",
+        "@dazn/lambda-powertools-middleware-correlation-ids": "1.28.1",
+        "@middy/core": "2.2.0",
+        "@middy/http-error-handler": "2.2.0",
+        "@middy/http-json-body-parser": "2.2.0",
+        "@middy/validator": "2.2.0",
         "@types/http-errors": "^1.8.0",
-        "@types/lodash": "^4.14.170",
         "@types/uuid": "^8.3.0",
-        "aws-sdk": "^2.854.0",
+        "aws-sdk": "^2.839.0",
         "aws-xray-sdk": "^3.2.0",
-        "cdk-dia": "^0.3.0",
         "http-errors": "^1.8.0",
         "jest-sonar-reporter": "^2.0.0",
         "json-colorizer": "^2.2.2",
         "lambda-log": "^2.4.0",
         "lodash": "^4.17.21",
-        "sqlite3": "^5.0.2",
-        "typeorm": "0.2.34",
-        "typeorm-aurora-data-api-driver": "2.1.1",
+        "openapi-request-validator": "^9.0.0",
+        "typeorm": "0.2.37",
+        "typeorm-aurora-data-api-driver": "2.3.1",
         "typeorm-naming-strategies": "2.0.0",
         "typescript-logging": "^1.0.0",
         "uuid": "^8.3.2"
