--- a/infra/tsconfig.json
+++ b/infra/tsconfig.json
@@ -20,7 +20,7 @@
         "strictPropertyInitialization": false,
         "typeRoots": ["./node_modules/@types"],
         "esModuleInterop": true,
-        "resolveJsonModule": true,
+        "resolveJsonModule": true
     },
     "exclude": ["./cdk.out"]
 }
