--- a/api-specs/package.json
+++ b/api-specs/package.json
@@ -4,14 +4,20 @@
     "description": "API specs entity generation",
     "main": "index.js",
     "config": {
-        "file": "realty-api-v1.yaml"
+        "file": "your-api-schema-v1.yaml"
     },
     "scripts": {
         "build": "npx openapi-typescript $npm_package_config_file --output dist/api-schema.ts",
         "build:out": "npx openapi-typescript $npm_package_config_file",
+        "tojsonschema": "node openapischema.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "devDependencies": {
         "openapi-typescript": "^3.2.4"
+    },
+    "dependencies": {
+        "@openapi-contrib/openapi-schema-to-json-schema": "^3.1.0",
+        "@stoplight/json-ref-resolver": "^3.1.2",
+        "js-yaml": "^4.1.0"
     }
 }
