--- a/.github/workflows/openapi-lint.yaml
+++ b/.github/workflows/openapi-lint.yaml
@@ -13,28 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
-    # Add yaml files using this step with: file_path: key
-    - name: swagger-cli
-      uses: vaibhav-jain/spectral-action/@v2.6
+    - name: Open API Spectral Lint
+      uses: stoplightio/spectral-action@v0.8.1
       with:
-        file_path: api-specs/*.yml
-    ################################
-    # Run Linter against code base #
-    ################################
-    - name: Lint Code Base
-      continue-on-error: true
-      uses: github/super-linter@v3
-      env:
-        VALIDATE_ALL_CODEBASE: false
-        DEFAULT_BRANCH: main
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        VALIDATE_JAVA: false
-        VALIDATE_JAVASCRIPT_ES: false
-        VALIDATE_JAVASCRIPT_STANDARD: false
-        VALIDATE_JSX: false
-        VALIDATE_KOTLIN: false
-        VALIDATE_SQL: false
-        VALIDATE_TSX: false
-        VALIDATE_TYPESCRIPT_ES: false
-        VALIDATE_TYPESCRIPT_STANDARD: false
+        file_glob: 'api-specs/*.{yaml,yml}'
