--- a/.github/workflows/destroy-preview-infra-pipeline.yaml
+++ b/.github/workflows/destroy-preview-infra-pipeline.yaml
@@ -4,6 +4,9 @@ on:
 jobs:
   delete:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write # needed to interact with GitHub's OIDC Token endpoint.
+      contents: read
     if: startsWith(github.event.ref, 'preview/')
     steps:
       - uses: actions/checkout@v2
@@ -34,16 +37,19 @@ jobs:
         run: |
           npm install
           npm run build:all
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@master
+        with:
+          aws-region: eu-west-1
+          role-to-assume: FIND_ME_AND_REPLACE_WITH_REPO_OIDC_ROLE_ARN
+          role-session-name: destroy-preview-infra-pipeline-${{ env.ENVIRONMENT }}
       - name: destroy all stacks
         working-directory: ./infra
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.CDK_USER_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.CDK_USER_SECRET_ACCESS_KEY }}
         run: |
-          aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID --profile deploy_profile
-          aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY --profile deploy_profile
-          aws configure set region eu-west-1 --profile deploy_profile
-          npx cdk destroy --context account=${{ env.ACCOUNT }} --context environment=${{ env.ENVIRONMENT }} --profile deploy_profile --require-approval never --all --force
+          npx cdk destroy --context account=${{ env.ACCOUNT }} --context environment=${{ env.ENVIRONMENT }} --require-approval never --all --force
       ########################
       # Destroy core backend #
       ########################
