Add request header id appender middleware. (#35)

--- a/infra/package.json
+++ b/infra/package.json
@@ -101,10 +101,11 @@
         "@dazn/lambda-powertools-correlation-ids": "1.28.1",
         "@dazn/lambda-powertools-logger": "1.28.1",
         "@dazn/lambda-powertools-middleware-correlation-ids": "1.28.1",
-        "@middy/core": "2.2.0",
-        "@middy/http-error-handler": "2.2.0",
-        "@middy/http-json-body-parser": "2.2.0",
-        "@middy/validator": "2.2.0",
+        "@middy/core": "~2.4.0",
+        "@middy/http-error-handler": "~2.4.0",
+        "@middy/http-json-body-parser": "~2.4.0",
+        "@middy/util": "~2.4.3",
+        "@middy/validator": "~2.4.0",
         "@types/http-errors": "^1.8.0",
         "@types/uuid": "^8.3.0",
         "aws-sdk": "^2.839.0",
