--- a/infra/package.json
+++ b/infra/package.json
@@ -3,7 +3,8 @@
     "version": "0.1.0",
     "engines": {
         "node": ">=14.16.0 <15.0.0",
-        "npm": ">=6.14.11 <7.0.0"
+        "npm": ">=6.14.11 <7.0.0",
+        "yarn": "\n\n Use NPM! \n\n"
     },
     "bin": {
         "infra": "bin/app.js"
@@ -15,9 +16,10 @@
         "lint:es": "eslint '*/**/*.{ts,tsx}' --max-warnings 0",
         "cdk": "npx cdk",
         "test": "npx tsc && jest --runInBand",
-        "test:update": "jest --runInBand -u",
-        "test:watch": "jest --watch",
         "integration-test": "jest -c jest.config.it.js --runInBand",
+        "it": "npm run integration-test",
+        "test:update": "jest --runInBand -u --collect-coverage=false",
+        "test:watch": "jest --watch --collect-coverage=false",
         "clean": "npx rimraf '+(bin|lib|functions|__test__|utils)/**/+(*.d.ts|*.js)'",
         "build:application": "concurrently 'npm:build:lambda'",
         "build:lambda": "npm run build:lambda:api-model && concurrently 'npm:build:lambda:java'",
@@ -26,90 +28,61 @@
         "build:lambda:java:database:aurora:migrator": "./functions/database/aurora/migrator/build-with-docker.sh"
     },
     "devDependencies": {
-        "@almamedia/cdk-accounts-and-environments": "^0.7.0",
-        "@almamedia/cdk-assumed-credentials-provider": "^0.4.0",
-        "@almamedia/cdk-cross-region-parameter": "^0.1.1",
-        "@almamedia/cdk-dynamodb-export": "^0.4.0",
-        "@almamedia/cdk-open-api": "^0.11.0",
-        "@almamedia/cdk-regions": "^0.1.0",
-        "@almamedia/cdk-tag-and-name": "^1.3.0",
-        "@aws-cdk/assert": "1.138.2",
-        "@aws-cdk/assets": "1.138.2",
-        "@aws-cdk/aws-apigateway": "1.138.2",
-        "@aws-cdk/aws-apigatewayv2": "1.138.2",
-        "@aws-cdk/aws-certificatemanager": "1.138.2",
-        "@aws-cdk/aws-cloudformation": "1.138.2",
-        "@aws-cdk/aws-cloudfront": "1.138.2",
-        "@aws-cdk/aws-cloudfront-origins": "1.138.2",
-        "@aws-cdk/aws-cloudwatch": "1.138.2",
-        "@aws-cdk/aws-cloudwatch-actions": "1.138.2",
-        "@aws-cdk/aws-codedeploy": "1.138.2",
-        "@aws-cdk/aws-ec2": "1.138.2",
-        "@aws-cdk/aws-ecr-assets": "1.138.2",
-        "@aws-cdk/aws-ecs-patterns": "1.138.2",
-        "@aws-cdk/aws-elasticache": "1.138.2",
-        "@aws-cdk/aws-elasticloadbalancingv2": "1.138.2",
-        "@aws-cdk/aws-events": "1.138.2",
-        "@aws-cdk/aws-events-targets": "1.138.2",
-        "@aws-cdk/aws-iam": "1.138.2",
-        "@aws-cdk/aws-kms": "1.138.2",
-        "@aws-cdk/aws-lambda": "1.138.2",
-        "@aws-cdk/aws-lambda-event-sources": "1.138.2",
-        "@aws-cdk/aws-lambda-nodejs": "1.138.2",
-        "@aws-cdk/aws-logs": "1.138.2",
-        "@aws-cdk/aws-rds": "1.138.2",
-        "@aws-cdk/aws-route53": "1.138.2",
-        "@aws-cdk/aws-route53-targets": "1.138.2",
-        "@aws-cdk/aws-s3": "1.138.2",
-        "@aws-cdk/aws-sns": "1.138.2",
-        "@aws-cdk/aws-sns-subscriptions": "1.138.2",
-        "@aws-cdk/aws-sqs": "1.138.2",
-        "@aws-cdk/aws-ssm": "1.138.2",
-        "@aws-cdk/aws-wafv2": "1.138.2",
-        "@aws-cdk/cloud-assembly-schema": "1.138.2",
-        "@aws-cdk/core": "1.138.2",
-        "@aws-cdk/custom-resources": "1.138.2",
-        "@aws-cdk/cx-api": "1.138.2",
+        "@almamedia-open-source/cdk-cross-region-parameter": "./demo-packages/cdk-cross-region-parameter@0.0.0.jsii.tgz",
+        "@almamedia-open-source/cdk-openapix": "./demo-packages/cdk-openapix@0.0.18.jsii.tgz",
+        "@almamedia-open-source/cdk-project-context": "0.0.19",
+        "@almamedia-open-source/cdk-project-names": "0.0.8",
+        "@almamedia-open-source/cdk-project-stack": "0.0.5",
+        "@almamedia-open-source/cdk-project-target": "0.0.10",
+        "@aws-sdk/client-sfn": "3.51.0",
         "@types/aws-lambda": "^8.10.76",
         "@types/jest": "^26.0.23",
         "@types/lodash": "^4.14.168",
         "@types/node": "14.17.4",
         "@types/test-console": "^1.1.0",
-        "@typescript-eslint/eslint-plugin": "^4.14.2",
-        "@typescript-eslint/parser": "^4.14.2",
-        "aws-cdk": "1.138.2",
+        "@typescript-eslint/eslint-plugin": "^5",
+        "@typescript-eslint/parser": "^5",
+        "aws-cdk": "2.16.0",
+        "aws-sdk-mock": "^5.1.0",
         "change-case": "^4.1.2",
         "concurrently": "^5.3.0",
         "esbuild": "^0.13.3",
-        "eslint": "^7.19.0",
-        "eslint-config-prettier": "^7.2.0",
-        "eslint-plugin-prettier": "^3.4.0",
+        "eslint": "^8",
+        "eslint-import-resolver-node": "^0.3.6",
+        "eslint-import-resolver-typescript": "^2.5.0",
+        "eslint-plugin-import": "^2.25.4",
         "husky": "^4.3.8",
         "jest": "^26.6.3",
         "lint-staged": "^10.5.3",
+        "msw": "^0.36.5",
         "pg": "^8.7.1",
-        "prettier": "^2.3.0",
         "source-map-support": "^0.5.19",
         "test-console": "^2.0.0",
-        "testcontainers": "^7.21.0",
+        "testcontainers": "^8.6.1",
         "ts-jest": "^26.5.5",
         "ts-node": "^9.0.0",
         "typescript": "^4.4.3"
     },
+    "peerDependencies": {
+        "aws-cdk-lib": "^2.11.0",
+        "constructs": "^10.0.0"
+    },
     "dependencies": {
-        "@almamedia/ovipro-common-entities": "^0.1.19",
+        "@almamedia/ovipro-common-entities": "^0.1.21",
         "@dazn/lambda-powertools-correlation-ids": "1.28.1",
         "@dazn/lambda-powertools-logger": "1.28.1",
         "@dazn/lambda-powertools-middleware-correlation-ids": "1.28.1",
-        "@middy/core": "~2.4.0",
-        "@middy/http-error-handler": "~2.4.0",
-        "@middy/http-json-body-parser": "~2.4.0",
-        "@middy/util": "~2.4.3",
-        "@middy/validator": "~2.4.0",
+        "@middy/core": "2.4.0",
+        "@middy/http-error-handler": "2.2.0",
+        "@middy/http-json-body-parser": "2.2.0",
+        "@middy/validator": "2.2.0",
+        "@middy/util": "^2.4.3",
+        "@opensearch-project/opensearch": "^1.0.2",
         "@types/http-errors": "^1.8.0",
         "@types/uuid": "^8.3.0",
         "aws-sdk": "^2.839.0",
         "aws-xray-sdk": "^3.2.0",
+        "axios": "^0.21.4",
         "http-errors": "^1.8.0",
         "jest-sonar-reporter": "^2.0.0",
         "json-colorizer": "^2.2.2",
@@ -120,7 +93,9 @@
         "typeorm-aurora-data-api-driver": "2.3.1",
         "typeorm-naming-strategies": "2.0.0",
         "typescript-logging": "^1.0.0",
-        "uuid": "^8.3.2"
+        "uuid": "^8.3.2",
+        "aws-cdk-lib": "2.16.0",
+        "constructs": "^10.0.0"
     },
     "husky": {
         "hooks": {
@@ -128,7 +103,6 @@
         }
     },
     "lint-staged": {
-        "*.ts": "eslint --cache --fix",
-        "*.{ts,css,md}": "prettier --write"
+        "*.ts": "eslint --cache --fix"
     }
 }
