--- a/infra/tsconfig.json
+++ b/infra/tsconfig.json
@@ -1,26 +1,34 @@
 {
     "compilerOptions": {
-        "target": "es2019",
-        "module": "commonjs",
-        "lib": ["es2019"],
-        "declaration": false,
-        "strict": true,
-        "noImplicitAny": true,
-        "strictNullChecks": true,
-        "noImplicitThis": true,
         "alwaysStrict": true,
-        "noUnusedLocals": false,
-        "noUnusedParameters": false,
-        "noImplicitReturns": true,
-        "noFallthroughCasesInSwitch": false,
+        "declaration": false,
+        "esModuleInterop": true,
+        "experimentalDecorators": true,
         "inlineSourceMap": true,
         "inlineSources": true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
+        "lib": [
+          "es2019",
+          "dom"
+        ],
+        "module": "CommonJS",
+        "noEmitOnError": false,
+        "noFallthroughCasesInSwitch": false,
+        "noImplicitAny": true,
+        "noImplicitReturns": true,
+        "noImplicitThis": true,
+        "noUnusedLocals": false,
+        "noUnusedParameters": false,
+        "resolveJsonModule": true,
+        "strict": true,
+        "strictNullChecks": true,
         "strictPropertyInitialization": false,
+        "stripInternal": true,
+        "target": "ES2019",
         "typeRoots": ["./node_modules/@types"],
-        "esModuleInterop": true,
-        "resolveJsonModule": true
     },
-    "exclude": ["./cdk.out"]
+    "include": [
+    "./**/*.ts",
+    "./**/*.ts"
+    ],
+    "exclude": ["./cdk.out", "./node_modules"]
 }
