--- a/infra/.eslintrc.json
+++ b/infra/.eslintrc.json
@@ -15,7 +15,8 @@
         "project": "./tsconfig.json"
     },
     "extends": [
-        "plugin:import/typescript"
+        "plugin:import/typescript",
+        "prettier"
     ],
     "settings": {
         "import/parsers": {
@@ -34,109 +35,12 @@
     },
     "ignorePatterns": [
         "*.js",
-        "!.projenrc.js",
         "*.d.ts",
         "node_modules/",
         "*.generated.ts",
         "coverage"
     ],
     "rules": {
-        "indent": [
-            "off"
-        ],
-        "@typescript-eslint/indent": [
-            "error",
-            4
-        ],
-        "quotes": [
-            "error",
-            "single",
-            {
-                "avoidEscape": true
-            }
-        ],
-        "comma-dangle": [
-            "error",
-            "always-multiline"
-        ],
-        "comma-spacing": [
-            "error",
-            {
-                "before": false,
-                "after": true
-            }
-        ],
-        "no-multi-spaces": [
-            "error",
-            {
-                "ignoreEOLComments": false
-            }
-        ],
-        "array-bracket-spacing": [
-            "error",
-            "never"
-        ],
-        "array-bracket-newline": [
-            "error",
-            "consistent"
-        ],
-        "object-curly-spacing": [
-            "error",
-            "always"
-        ],
-        "object-curly-newline": [
-            "error",
-            {
-                "multiline": true,
-                "consistent": true
-            }
-        ],
-        "object-property-newline": [
-            "error",
-            {
-                "allowAllPropertiesOnSameLine": true
-            }
-        ],
-        "keyword-spacing": [
-            "error"
-        ],
-        "brace-style": [
-            "error",
-            "1tbs",
-            {
-                "allowSingleLine": true
-            }
-        ],
-        "space-before-blocks": [
-            "error"
-        ],
-        "curly": [
-            "error",
-            "multi-line",
-            "consistent"
-        ],
-        "@typescript-eslint/member-delimiter-style": [
-            "error"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ],
-        "max-len": [
-            "error",
-            {
-                "code": 150,
-                "ignoreUrls": true,
-                "ignoreStrings": true,
-                "ignoreTemplateLiterals": true,
-                "ignoreComments": true,
-                "ignoreRegExpLiterals": true
-            }
-        ],
-        "quote-props": [
-            "error",
-            "consistent-as-needed"
-        ],
         "@typescript-eslint/no-require-imports": [
             "error"
         ],
@@ -168,23 +72,14 @@
         "@typescript-eslint/no-shadow": [
             "off"
         ],
-        "key-spacing": [
-            "error"
-        ],
-        "no-multiple-empty-lines": [
-            "error"
-        ],
         "@typescript-eslint/no-floating-promises": [
-            "error"
+            "warn"
         ],
         "no-return-await": [
             "off"
         ],
         "@typescript-eslint/return-await": [
-            "error"
-        ],
-        "no-trailing-spaces": [
-            "error"
+            "off"
         ],
         "dot-notation": [
             "error"
