--- a/infra/package.json
+++ b/infra/package.json
@@ -2,8 +2,8 @@
     "name": "ovipro",
     "version": "0.1.0",
     "engines": {
-        "node": ">=14.16.0 <15.0.0",
-        "npm": ">=6.14.11 <7.0.0",
+        "node": ">=16 <17",
+        "npm": ">=7.10 <9",
         "yarn": "\n\n Use NPM! \n\n"
     },
     "bin": {
@@ -13,7 +13,11 @@
         "build": "npx tsc",
         "build:all": "npm run clean && npm run build:lambda:api-model && tsc && npm run build:application && tsc",
         "watch": "node ./node_modules/typescript/bin/tsc -w",
-        "lint:es": "eslint '*/**/*.{ts,tsx}' --max-warnings 0",
+        "lint": "npx eslint '*/**/*.{ts,tsx}' --max-warnings 0",
+        "lint:fix": "npx eslint '*/**/*.{ts,tsx}' --fix",
+        "prettier": "npx prettier . --check",
+        "prettier:fix": "npx prettier . --write",
+        "format": "npm run lint:fix && npm run prettier:fix",
         "cdk": "npx cdk",
         "test": "npx tsc && jest --runInBand",
         "integration-test": "jest -c jest.config.it.js --runInBand",
@@ -48,6 +52,7 @@
         "concurrently": "^5.3.0",
         "esbuild": "^0.13.3",
         "eslint": "^8",
+        "eslint-config-prettier": "^8.5.0",
         "eslint-import-resolver-node": "^0.3.6",
         "eslint-import-resolver-typescript": "^2.5.0",
         "eslint-plugin-import": "^2.25.4",
@@ -56,6 +61,8 @@
         "lint-staged": "^10.5.3",
         "msw": "^0.36.5",
         "pg": "^8.7.1",
+        "prettier": "2.6.2",
+        "prettier-eslint": "^14.0.3",
         "source-map-support": "^0.5.19",
         "test-console": "^2.0.0",
         "testcontainers": "^8.6.1",
@@ -103,6 +110,6 @@
         }
     },
     "lint-staged": {
-        "*.ts": "eslint --cache --fix"
+        "*.ts": ["npm run lint", "npm run prettier"]
     }
 }
