--- a/.github/workflows/full-deploy-feature-pipeline.yaml
+++ b/.github/workflows/full-deploy-feature-pipeline.yaml
@@ -16,11 +16,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '14'
-          cache: 'npm'
-          cache-dependency-path: './infra/package-lock.json'
+          node-version: "16"
+          cache: "npm"
+          cache-dependency-path: "./infra/package-lock.json"
       - name: Notify slack success
         if: success()
         id: slack # IMPORTANT: reference this step ID value in future Slack steps
@@ -28,7 +28,7 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.MEPA_ASUMINEN_OVIPRO_SLACK_NOTIFICATIONS_BOT_TOKEN }}
         uses: voxmedia/github-action-slack-notify-build@v1.1.2
         with:
-          channel: 'ovi_pro_pipeline_development_deployments'
+          channel: "ovi_pro_pipeline_development_deployments"
           status: STARTED
           color: warning
       - name: Set account to dev & environment to feature (from branch)
@@ -110,7 +110,7 @@ jobs:
         with:
           # Updates existing message from the first step
           message_id: ${{ steps.slack.outputs.message_id }}
-          channel: 'ovi_pro_pipeline_development_deployments'
+          channel: "ovi_pro_pipeline_development_deployments"
           status: STARTED
           color: good
       - name: Notify slack failure
@@ -121,6 +121,6 @@ jobs:
         with:
           # Updates existing message from the first step
           message_id: ${{ steps.slack.outputs.message_id }}
-          channel: 'ovi_pro_pipeline_development_deployments'
+          channel: "ovi_pro_pipeline_development_deployments"
           status: FAILED
           color: danger
