--- a/.github/workflows/main-pipeline.yaml
+++ b/.github/workflows/main-pipeline.yaml
@@ -20,15 +20,15 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.MEPA_ASUMINEN_OVIPRO_SLACK_NOTIFICATIONS_BOT_TOKEN }}
         uses: voxmedia/github-action-slack-notify-build@v1.1.2
         with:
-          channel: 'ovi_pro_pipeline_development_deployments'
+          channel: "ovi_pro_pipeline_development_deployments"
           status: STARTED
           color: warning
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '14'
-          cache: 'npm'
-          cache-dependency-path: './infra/package-lock.json'
+          node-version: "16"
+          cache: "npm"
+          cache-dependency-path: "./infra/package-lock.json"
       - name: set account to dev & environment to staging
         if: endsWith(github.ref, '/main')
         run: |
@@ -73,7 +73,7 @@ jobs:
         with:
           # Updates existing message from the first step
           message_id: ${{ steps.slack.outputs.message_id }}
-          channel: 'ovi_pro_pipeline_development_deployments'
+          channel: "ovi_pro_pipeline_development_deployments"
           status: STARTED
           color: good
       - name: Notify slack failure
@@ -84,6 +84,6 @@ jobs:
         with:
           # Updates existing message from the first step
           message_id: ${{ steps.slack.outputs.message_id }}
-          channel: 'ovi_pro_pipeline_development_deployments'
+          channel: "ovi_pro_pipeline_development_deployments"
           status: FAILED
           color: danger
