--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -5,52 +5,52 @@ jobs:
   run_tests:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Setup Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-        cache: 'npm'
-        cache-dependency-path: './infra/package-lock.json'
-    - name: Extract branch name
-      shell: bash
-      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-      id: extract_branch
-    - name: Get access for alma packages
-      run: echo "GITHUB_ACCESS_TOKEN=${{ secrets.MEPA_GH_ACTIONS_BOT_TOKEN }}" >> $GITHUB_ENV
-    - name: Set up Maven settings
-      uses: s4u/maven-settings-action@v2.3.0
-      with:
-        servers: |
-          [{
-              "id": "mepa-ovipro",
-              "username": "${{ secrets.MEPA_GH_ACTIONS_BOT_USERNAME }}",
-              "password": "${{ secrets.MEPA_GH_ACTIONS_BOT_TOKEN }}"
-          }]
-    - name: Install deps & build
-      working-directory: ./infra
-      run: |
-        npm install
-        npm run build:lambda:java
-        npm run build:lambda:api-model
-    - name: Run tests
-      working-directory: ./infra
-      run: npm run test
-    - name: SonarCloud scan
-      uses: sonarsource/sonarcloud-github-action@master
-      with:
-        projectBaseDir: ./infra
-        args: >
-          -Dsonar.organization=almamedia
-          -Dsonar.moduleKey=${{ github.event.repository.name }}:${{ github.event.repository.name }}:${{ github.run_id }}
-          -Dsonar.projectKey=almamedia_${{ github.event.repository.name }}
-          -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info
-          -Dsonar.testExecutionReportPaths=test-report.xml
-          -Dsonar.branch.name=${{ steps.extract_branch.outputs.branch }}
-          -Dsonar.exlusions=**/node_modules/**,**/*.test.ts,**/*.java
-          -Dsonar.java.source=11
-          -Dsonar.java.binaries=functions/database/aurora/migrator/target/classes
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.MEPA_ASUMINEN_GH_ACTIONS_BOT_SONARCLOUD_TOKEN }}
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16"
+          cache: "npm"
+          cache-dependency-path: "./infra/package-lock.json"
+      - name: Extract branch name
+        shell: bash
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: extract_branch
+      - name: Get access for alma packages
+        run: echo "GITHUB_ACCESS_TOKEN=${{ secrets.MEPA_GH_ACTIONS_BOT_TOKEN }}" >> $GITHUB_ENV
+      - name: Set up Maven settings
+        uses: s4u/maven-settings-action@v2.3.0
+        with:
+          servers: |
+            [{
+                "id": "mepa-ovipro",
+                "username": "${{ secrets.MEPA_GH_ACTIONS_BOT_USERNAME }}",
+                "password": "${{ secrets.MEPA_GH_ACTIONS_BOT_TOKEN }}"
+            }]
+      - name: Install deps & build
+        working-directory: ./infra
+        run: |
+          npm install
+          npm run build:lambda:java
+          npm run build:lambda:api-model
+      - name: Run tests
+        working-directory: ./infra
+        run: npm run test
+      - name: SonarCloud scan
+        uses: sonarsource/sonarcloud-github-action@master
+        with:
+          projectBaseDir: ./infra
+          args: >
+            -Dsonar.organization=almamedia
+            -Dsonar.moduleKey=${{ github.event.repository.name }}:${{ github.event.repository.name }}:${{ github.run_id }}
+            -Dsonar.projectKey=almamedia_${{ github.event.repository.name }}
+            -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info
+            -Dsonar.testExecutionReportPaths=test-report.xml
+            -Dsonar.branch.name=${{ steps.extract_branch.outputs.branch }}
+            -Dsonar.exlusions=**/node_modules/**,**/*.test.ts,**/*.java
+            -Dsonar.java.source=11
+            -Dsonar.java.binaries=functions/database/aurora/migrator/target/classes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.MEPA_ASUMINEN_GH_ACTIONS_BOT_SONARCLOUD_TOKEN }}
