--- a/infra/package.json
+++ b/infra/package.json
@@ -32,9 +32,9 @@
         "build:lambda:java:database:aurora:migrator": "./functions/database/aurora/migrator/build-with-docker.sh"
     },
     "devDependencies": {
-        "@alma-cdk/openapix": "./demo-packages/openapix@0.1.0.jsii.tgz",
-        "@alma-cdk/project": "^0.0.18",
-        "@almamedia-open-source/cdk-cross-region-parameter": "./demo-packages/cdk-cross-region-parameter@0.0.0.jsii.tgz",
+        "@alma-cdk/openapix": "^0.0.46",
+        "@alma-cdk/project": "^0.0.27",
+        "@alma-cdk/cross-region-parameter": "^0.0.13",
         "@aws-sdk/client-sfn": "3.171.0",
         "@types/aws-lambda": "^8.10.76",
         "@types/jest": "^27.5.0",
@@ -43,8 +43,9 @@
         "@types/test-console": "^1.1.0",
         "@typescript-eslint/eslint-plugin": "^5",
         "@typescript-eslint/parser": "^5",
-        "aws-cdk": "2.40.0",
+        "aws-cdk": "2.55.0",
         "aws-sdk-mock": "^5.1.0",
+        "cdk-nag": "^2.20.5",
         "change-case": "^4.1.2",
         "concurrently": "^5.3.0",
         "esbuild": "^0.13.3",
@@ -54,18 +55,19 @@
         "eslint-import-resolver-typescript": "^2.5.0",
         "eslint-plugin-import": "^2.25.4",
         "husky": "^4.3.8",
-        "jest": "^27.5.0",
+        "jest": "^29.0.3",
+        "jsondiffpatch": "^0.4.1",
         "lint-staged": "^10.5.3",
-        "msw": "^0.36.5",
+        "msw": "0.47.4",
         "pg": "^8.7.1",
         "prettier": "2.6.2",
         "prettier-eslint": "^14.0.3",
         "source-map-support": "^0.5.19",
         "test-console": "^2.0.0",
-        "testcontainers": "^8.6.1",
-        "ts-jest": "^27.1.4",
+        "testcontainers": "^8.15.0",
+        "ts-jest": "^29.0.2",
         "ts-node": "10.7.0",
-        "typescript": "4.6.4"
+        "typescript": "4.8.4"
     },
     "peerDependencies": {
         "aws-cdk-lib": "2.40.0",
