--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -6,11 +6,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "16"
+          node-version-file: "infra/.nvmrc"
           cache: "npm"
           cache-dependency-path: "./infra/package-lock.json"
       - name: Extract branch name
@@ -31,26 +31,9 @@ jobs:
       - name: Install deps & build
         working-directory: ./infra
         run: |
-          npm install
+          npm install --legacy-peer-deps
           npm run build:lambda:java
           npm run build:lambda:api-model
       - name: Run tests
         working-directory: ./infra
-        run: npm run test
-      - name: SonarCloud scan
-        uses: sonarsource/sonarcloud-github-action@master
-        with:
-          projectBaseDir: ./infra
-          args: >
-            -Dsonar.organization=almamedia
-            -Dsonar.moduleKey=${{ github.event.repository.name }}:${{ github.event.repository.name }}:${{ github.run_id }}
-            -Dsonar.projectKey=almamedia_${{ github.event.repository.name }}
-            -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info
-            -Dsonar.testExecutionReportPaths=test-report.xml
-            -Dsonar.branch.name=${{ steps.extract_branch.outputs.branch }}
-            -Dsonar.exlusions=**/node_modules/**,**/*.test.ts,**/*.java
-            -Dsonar.java.source=11
-            -Dsonar.java.binaries=functions/database/aurora/migrator/target/classes
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.MEPA_ASUMINEN_GH_ACTIONS_BOT_SONARCLOUD_TOKEN }}
+        run: npm run test:all
